# sst-elements

src/sst/elements/golem/: Makefile.am  README.md  golem.cc
src/sst/elements/golem/array/: crossSimComputeArray.h  crossSimFloatArray.h  emulatedComputeArray.h  emulatedFloatArray.h  emulatedIntArray.h
src/sst/elements/golem/rocc/: roccAnalog.h
src/sst/elements/golem/tests/additional_tests/multi_core/crossSimArray/: multicore_example.py  openmp_example  openmp_example.cpp
src/sst/elements/golem/tests/additional_tests/multi_core/floatArray/: openmp_example.cpp
src/sst/elements/golem/tests/additional_tests/multi_core/intArray/: multicore_example.py  openmp_example.cpp
src/sst/elements/golem/tests/additional_tests/multi_core_multi_array/crossSimArray/: multicore_example.py
src/sst/elements/golem/tests/additional_tests/multi_core_multi_array/intArray/: multicore_example.py
src/sst/elements/golem/tests/additional_tests/multi_core_multi_array_control_core/: Makefile  multicore_example.py  openmp_example  openmp_example.cpp  ping_pong.py  stdout-100
src/sst/elements/golem/tests/basic_mvm/crossSimArray/analog_library_example/: analog_library_example  analog_library_example.cpp  crossSimConfig.json  mvm_cs_float_array_vanadis.py
src/sst/elements/golem/tests/multi_core/floatArray/: multicore_example.py
src/sst/elements/golem/tests/multi_core/intArray/: openmp_example
src/sst/elements/golem/tests/multi_core_multi_array/floatArray/: multicore_example.py  openmp_example.cpp
src/sst/elements/golem/tests/multi_core_multi_array/intArray/: openmp_example.cpp
(+74 files in other folders)
